2007-01-15  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DerbyProfileHelper.cs: fixed GetUserId, return null if username
	is null

2007-01-11  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DerbyProfileProvider.cs: added schema version or existence checking
	on creating connection

2007-01-10  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* DerbyProfileProvider.cs: fixed ReadProfileInfo, removed unneeded
	catch

2007-01-07  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* added CloudscapeProfileProvider.cs