@@ -601,6 +601,8 @@ namespace Mainsoft.Web.Security {
 				throw new ProviderException ("The ConnectionStringName attribute must be present and non-zero length.");
 
 			connectionString = WebConfigurationManager.ConnectionStrings [connectionStringName];
+			if (connectionString == null)
+				throw new ProviderException (String.Format ("The connection name '{0}' was not found in the applications configuration or the connection string is empty.", connectionStringName));
 
 			DerbyDBSchema.RegisterUnloadHandler (connectionString.ConnectionString);
 		}
