@@ -1,3 +1,8 @@
+2007-02-21  Vladimir Krasnov  <vladimirk@mainsoft.com>
+
+	* DerbyProfileProvider.cs: fixed Initialize, CreateConnection throw
+	exception if no connection string present
+
 2007-01-15  Vladimir Krasnov  <vladimirk@mainsoft.com>
 
 	* DerbyProfileHelper.cs: fixed GetUserId, return null if username
